results/SVCOMP/4-shot/log-ExSymExeLongBytecodes-2024_03_18_21_59_59.txt
class Main {

  //@ requires x > 0 || x <= 0;
  //@ ensures \result == true <==> test(x, 5);
  //@ ensures \result == false <==> !test(x, 5);
  public static boolean f(long x) {
    x = x > 0 ? -x : x;
    long y = 5;
    Main inst = new Main();
    return inst.test(x, y);
  }

  //@ requires true;
  //@ ensures \result == (diff > 34565) ==> false;
  //@ ensures \result == (diff <= 34565) ==> true;
  //@ ensures \result == (sum < 5) ==> false;
  //@ ensures \result == (sum >= 5) ==> true;
  public static boolean test(long x, long z) { // invokestatic
    long a = x;
    long b = z;
    long c = 34565;

    long negate = -z; // LNEG

    long sum = a + b; // LADD
    long sum2 = z + 9090909L; // LADD
    long sum3 = 90908877L + z; // LADD

    long diff = a - b; // LSUB
    long diff2 = b - 19999999999L; // LSUB
    long diff3 = 9999999999L - a; // LSUB

    long mul = a * b; // LMUL
    long mul2 = a * 19999999999L; // LMUL
    long mul3 = 19999999999L * b; // LMUL

    if (diff > c) {
      return false;
    } else System.out.println("branch diff <= c");
    if (sum < z) System.out.println("branch sum < z");
    else
      System.out.println("branch sum >= z");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeLongBytecodes.java:14: error: cannot find symbol
  //@ ensures \result == (diff > 34565) ==> false;
                          ^
  symbol:   variable diff
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeLongBytecodes.java:15: error: cannot find symbol
  //@ ensures \result == (diff <= 34565) ==> true;
                          ^
  symbol:   variable diff
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeLongBytecodes.java:16: error: cannot find symbol
  //@ ensures \result == (sum < 5) ==> false;
                          ^
  symbol:   variable sum
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeLongBytecodes.java:17: error: cannot find symbol
  //@ ensures \result == (sum >= 5) ==> true;
                          ^
  symbol:   variable sum
  location: class Main
4 errors

